sql-engine/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> select_stmt
Rule 2     query -> create_stmt
Rule 3     query -> insert_stmt
Rule 4     select_stmt -> SELECT optional_distinct select_list FROM ID optional_join optional_where optional_group optional_having optional_order optional_limit
Rule 5     select_stmt -> SELECT COUNT LPAREN STAR RPAREN FROM ID optional_where optional_group
Rule 6     select_stmt -> SELECT SUM LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 7     select_stmt -> SELECT AVG LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 8     select_stmt -> SELECT MIN LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 9     select_stmt -> SELECT MAX LPAREN ID RPAREN FROM ID optional_where optional_group
Rule 10    optional_where -> WHERE condition
Rule 11    optional_where -> empty
Rule 12    optional_join -> JOIN ID ON join_condition
Rule 13    optional_join -> empty
Rule 14    join_condition -> column_ref EQUAL column_ref
Rule 15    column_ref -> ID
Rule 16    column_ref -> ID DOT ID
Rule 17    optional_group -> GROUP BY group_by_list
Rule 18    optional_group -> empty
Rule 19    group_by_list -> column_ref
Rule 20    group_by_list -> group_by_list COMMA column_ref
Rule 21    optional_having -> HAVING having_condition
Rule 22    optional_having -> empty
Rule 23    having_condition -> aggregate_comparison
Rule 24    aggregate_comparison -> COUNT LPAREN STAR RPAREN comparator NUMBER
Rule 25    aggregate_comparison -> aggregate_func LPAREN ID RPAREN comparator NUMBER
Rule 26    optional_order -> ORDER BY order_by_expr
Rule 27    optional_order -> empty
Rule 28    order_by_expr -> column_ref
Rule 29    order_by_expr -> column_ref ASC
Rule 30    order_by_expr -> column_ref DESC
Rule 31    order_by_expr -> COUNT LPAREN STAR RPAREN
Rule 32    order_by_expr -> COUNT LPAREN STAR RPAREN ASC
Rule 33    order_by_expr -> COUNT LPAREN STAR RPAREN DESC
Rule 34    order_by_expr -> aggregate_func LPAREN ID RPAREN
Rule 35    order_by_expr -> aggregate_func LPAREN ID RPAREN ASC
Rule 36    order_by_expr -> aggregate_func LPAREN ID RPAREN DESC
Rule 37    aggregate_func -> SUM
Rule 38    aggregate_func -> AVG
Rule 39    aggregate_func -> MIN
Rule 40    aggregate_func -> MAX
Rule 41    optional_limit -> LIMIT NUMBER
Rule 42    optional_limit -> empty
Rule 43    empty -> <empty>
Rule 44    optional_distinct -> DISTINCT
Rule 45    optional_distinct -> empty
Rule 46    select_list -> STAR
Rule 47    select_list -> column_list
Rule 48    column_list -> column_item
Rule 49    column_list -> column_list COMMA column_item
Rule 50    column_item -> ID
Rule 51    column_item -> ID DOT ID
Rule 52    column_item -> COUNT LPAREN STAR RPAREN
Rule 53    column_item -> SUM LPAREN ID RPAREN
Rule 54    column_item -> AVG LPAREN ID RPAREN
Rule 55    column_item -> MIN LPAREN ID RPAREN
Rule 56    column_item -> MAX LPAREN ID RPAREN
Rule 57    condition -> or_condition
Rule 58    or_condition -> and_condition
Rule 59    or_condition -> or_condition OR and_condition
Rule 60    and_condition -> not_condition
Rule 61    and_condition -> and_condition AND not_condition
Rule 62    not_condition -> simple_condition
Rule 63    not_condition -> NOT simple_condition
Rule 64    simple_condition -> column_ref comparator value
Rule 65    comparator -> EQUAL
Rule 66    comparator -> GT
Rule 67    comparator -> LT
Rule 68    comparator -> GE
Rule 69    comparator -> LE
Rule 70    value -> NUMBER
Rule 71    value -> MINUS NUMBER
Rule 72    value -> STRING
Rule 73    create_stmt -> CREATE TABLE ID LPAREN column_def_list RPAREN
Rule 74    column_def_list -> column_def
Rule 75    column_def_list -> column_def_list COMMA column_def
Rule 76    column_def -> ID INT
Rule 77    column_def -> ID INT PRIMARY KEY
Rule 78    column_def -> ID INT NOT NULL
Rule 79    column_def -> ID FLOAT
Rule 80    column_def -> ID FLOAT NOT NULL
Rule 81    column_def -> ID BOOL
Rule 82    column_def -> ID BOOL NOT NULL
Rule 83    column_def -> ID VARCHAR LPAREN NUMBER RPAREN
Rule 84    column_def -> ID VARCHAR LPAREN NUMBER RPAREN NOT NULL
Rule 85    column_def -> ID VARCHAR LPAREN NUMBER RPAREN PRIMARY KEY
Rule 86    insert_stmt -> INSERT INTO ID LPAREN column_name_list RPAREN VALUES LPAREN value_list RPAREN
Rule 87    insert_stmt -> INSERT INTO ID VALUES LPAREN value_list RPAREN
Rule 88    column_name_list -> ID
Rule 89    column_name_list -> column_name_list COMMA ID
Rule 90    value_list -> value
Rule 91    value_list -> value_list COMMA value

Terminals, with rules where they appear

AND                  : 61
ASC                  : 29 32 35
AVG                  : 7 38 54
BOOL                 : 81 82
BY                   : 17 26
COMMA                : 20 49 75 89 91
COUNT                : 5 24 31 32 33 52
CREATE               : 73
DESC                 : 30 33 36
DISTINCT             : 44
DOT                  : 16 51
EQUAL                : 14 65
FLOAT                : 79 80
FROM                 : 4 5 6 7 8 9
GE                   : 68
GROUP                : 17
GT                   : 66
HAVING               : 21
ID                   : 4 5 6 6 7 7 8 8 9 9 12 15 16 16 25 34 35 36 50 51 51 53 54 55 56 73 76 77 78 79 80 81 82 83 84 85 86 87 88 89
INSERT               : 86 87
INT                  : 76 77 78
INTO                 : 86 87
JOIN                 : 12
KEY                  : 77 85
LE                   : 69
LIMIT                : 41
LPAREN               : 5 6 7 8 9 24 25 31 32 33 34 35 36 52 53 54 55 56 73 83 84 85 86 86 87
LT                   : 67
MAX                  : 9 40 56
MIN                  : 8 39 55
MINUS                : 71
NOT                  : 63 78 80 82 84
NULL                 : 78 80 82 84
NUMBER               : 24 25 41 70 71 83 84 85
ON                   : 12
OR                   : 59
ORDER                : 26
PRIMARY              : 77 85
RPAREN               : 5 6 7 8 9 24 25 31 32 33 34 35 36 52 53 54 55 56 73 83 84 85 86 86 87
SELECT               : 4 5 6 7 8 9
STAR                 : 5 24 31 32 33 46 52
STRING               : 72
SUM                  : 6 37 53
TABLE                : 73
VALUES               : 86 87
VARCHAR              : 83 84 85
WHERE                : 10
error                : 

Nonterminals, with rules where they appear

aggregate_comparison : 23
aggregate_func       : 25 34 35 36
and_condition        : 58 59 61
column_def           : 74 75
column_def_list      : 73 75
column_item          : 48 49
column_list          : 47 49
column_name_list     : 86 89
column_ref           : 14 14 19 20 28 29 30 64
comparator           : 24 25 64
condition            : 10
create_stmt          : 2
empty                : 11 13 18 22 27 42 45
group_by_list        : 17 20
having_condition     : 21
insert_stmt          : 3
join_condition       : 12
not_condition        : 60 61
optional_distinct    : 4
optional_group       : 4 5 6 7 8 9
optional_having      : 4
optional_join        : 4
optional_limit       : 4
optional_order       : 4
optional_where       : 4 5 6 7 8 9
or_condition         : 57 59
order_by_expr        : 26
query                : 0
select_list          : 4
select_stmt          : 1
simple_condition     : 62 63
value                : 64 90 91
value_list           : 86 87 91

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select_stmt
    (2) query -> . create_stmt
    (3) query -> . insert_stmt
    (4) select_stmt -> . SELECT optional_distinct select_list FROM ID optional_join optional_where optional_group optional_having optional_order optional_limit
    (5) select_stmt -> . SELECT COUNT LPAREN STAR RPAREN FROM ID optional_where optional_group
    (6) select_stmt -> . SELECT SUM LPAREN ID RPAREN FROM ID optional_where optional_group
    (7) select_stmt -> . SELECT AVG LPAREN ID RPAREN FROM ID optional_where optional_group
    (8) select_stmt -> . SELECT MIN LPAREN ID RPAREN FROM ID optional_where optional_group
    (9) select_stmt -> . SELECT MAX LPAREN ID RPAREN FROM ID optional_where optional_group
    (73) create_stmt -> . CREATE TABLE ID LPAREN column_def_list RPAREN
    (86) insert_stmt -> . INSERT INTO ID LPAREN column_name_list RPAREN VALUES LPAREN value_list RPAREN
    (87) insert_stmt -> . INSERT INTO ID VALUES LPAREN value_list RPAREN

    SELECT          shift and go to state 5
    CREATE          shift and go to state 6
    INSERT          shift and go to state 7

    query                          shift and go to state 1
    select_stmt                    shift and go to state 2
    create_stmt                    shift and go to state 3
    insert_stmt                    shift and go to state 4

state 1

    (0) S' -> query .



state 2

    (1) query -> select_stmt .

    $end            reduce using rule 1 (query -> select_stmt .)


state 3

    (2) query -> create_stmt .

    $end            reduce using rule 2 (query -> create_stmt .)


state 4

    (3) query -> insert_stmt .

    $end            reduce using rule 3 (query -> insert_stmt .)


state 5

    (4) select_stmt -> SELECT . optional_distinct select_list FROM ID optional_join optional_where optional_group optional_having optional_order optional_limit
    (5) select_stmt -> SELECT . COUNT LPAREN STAR RPAREN FROM ID optional_where optional_group
    (6) select_stmt -> SELECT . SUM LPAREN ID RPAREN FROM ID optional_where optional_group
    (7) select_stmt -> SELECT . AVG LPAREN ID RPAREN FROM ID optional_where optional_group
    (8) select_stmt -> SELECT . MIN LPAREN ID RPAREN FROM ID optional_where optional_group
    (9) select_stmt -> SELECT . MAX LPAREN ID RPAREN FROM ID optional_where optional_group
    (44) optional_distinct -> . DISTINCT
    (45) optional_distinct -> . empty
    (43) empty -> .

  ! shift/reduce conflict for COUNT resolved as shift
  ! shift/reduce conflict for SUM resolved as shift
  ! shift/reduce conflict for AVG resolved as shift
  ! shift/reduce conflict for MIN resolved as shift
  ! shift/reduce conflict for MAX resolved as shift
    COUNT           shift and go to state 9
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    MIN             shift and go to state 12
    MAX             shift and go to state 13
    DISTINCT        shift and go to state 14
    STAR            reduce using rule 43 (empty -> .)
    ID              reduce using rule 43 (empty -> .)

  ! COUNT           [ reduce using rule 43 (empty -> .) ]
  ! SUM             [ reduce using rule 43 (empty -> .) ]
  ! AVG             [ reduce using rule 43 (empty -> .) ]
  ! MIN             [ reduce using rule 43 (empty -> .) ]
  ! MAX             [ reduce using rule 43 (empty -> .) ]

    optional_distinct              shift and go to state 8
    empty                          shift and go to state 15

state 6

    (73) create_stmt -> CREATE . TABLE ID LPAREN column_def_list RPAREN

    TABLE           shift and go to state 16


state 7

    (86) insert_stmt -> INSERT . INTO ID LPAREN column_name_list RPAREN VALUES LPAREN value_list RPAREN
    (87) insert_stmt -> INSERT . INTO ID VALUES LPAREN value_list RPAREN

    INTO            shift and go to state 17


state 8

    (4) select_stmt -> SELECT optional_distinct . select_list FROM ID optional_join optional_where optional_group optional_having optional_order optional_limit
    (46) select_list -> . STAR
    (47) select_list -> . column_list
    (48) column_list -> . column_item
    (49) column_list -> . column_list COMMA column_item
    (50) column_item -> . ID
    (51) column_item -> . ID DOT ID
    (52) column_item -> . COUNT LPAREN STAR RPAREN
    (53) column_item -> . SUM LPAREN ID RPAREN
    (54) column_item -> . AVG LPAREN ID RPAREN
    (55) column_item -> . MIN LPAREN ID RPAREN
    (56) column_item -> . MAX LPAREN ID RPAREN

    STAR            shift and go to state 20
    ID              shift and go to state 19
    COUNT           shift and go to state 23
    SUM             shift and go to state 24
    AVG             shift and go to state 25
    MIN             shift and go to state 26
    MAX             shift and go to state 27

    select_list                    shift and go to state 18
    column_list                    shift and go to state 21
    column_item                    shift and go to state 22

state 9

    (5) select_stmt -> SELECT COUNT . LPAREN STAR RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 28


state 10

    (6) select_stmt -> SELECT SUM . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 29


state 11

    (7) select_stmt -> SELECT AVG . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 30


state 12

    (8) select_stmt -> SELECT MIN . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 31


state 13

    (9) select_stmt -> SELECT MAX . LPAREN ID RPAREN FROM ID optional_where optional_group

    LPAREN          shift and go to state 32


state 14

    (44) optional_distinct -> DISTINCT .

    STAR            reduce using rule 44 (optional_distinct -> DISTINCT .)
    ID              reduce using rule 44 (optional_distinct -> DISTINCT .)
    COUNT           reduce using rule 44 (optional_distinct -> DISTINCT .)
    SUM             reduce using rule 44 (optional_distinct -> DISTINCT .)
    AVG             reduce using rule 44 (optional_distinct -> DISTINCT .)
    MIN             reduce using rule 44 (optional_distinct -> DISTINCT .)
    MAX             reduce using rule 44 (optional_distinct -> DISTINCT .)


state 15

    (45) optional_distinct -> empty .

    STAR            reduce using rule 45 (optional_distinct -> empty .)
    ID              reduce using rule 45 (optional_distinct -> empty .)
    COUNT           reduce using rule 45 (optional_distinct -> empty .)
    SUM             reduce using rule 45 (optional_distinct -> empty .)
    AVG             reduce using rule 45 (optional_distinct -> empty .)
    MIN             reduce using rule 45 (optional_distinct -> empty .)
    MAX             reduce using rule 45 (optional_distinct -> empty .)


state 16

    (73) create_stmt -> CREATE TABLE . ID LPAREN column_def_list RPAREN

    ID              shift and go to state 33


state 17

    (86) insert_stmt -> INSERT INTO . ID LPAREN column_name_list RPAREN VALUES LPAREN value_list RPAREN
    (87) insert_stmt -> INSERT INTO . ID VALUES LPAREN value_list RPAREN

    ID              shift and go to state 34


state 18

    (4) select_stmt -> SELECT optional_distinct select_list . FROM ID optional_join optional_where optional_group optional_having optional_order optional_limit

    FROM            shift and go to state 35


state 19

    (50) column_item -> ID .
    (51) column_item -> ID . DOT ID

    COMMA           reduce using rule 50 (column_item -> ID .)
    FROM            reduce using rule 50 (column_item -> ID .)
    DOT             shift and go to state 36


state 20

    (46) select_list -> STAR .

    FROM            reduce using rule 46 (select_list -> STAR .)


state 21

    (47) select_list -> column_list .
    (49) column_list -> column_list . COMMA column_item

    FROM            reduce using rule 47 (select_list -> column_list .)
    COMMA           shift and go to state 37


state 22

    (48) column_list -> column_item .

    COMMA           reduce using rule 48 (column_list -> column_item .)
    FROM            reduce using rule 48 (column_list -> column_item .)


state 23

    (52) column_item -> COUNT . LPAREN STAR RPAREN

    LPAREN          shift and go to state 38


state 24

    (53) column_item -> SUM . LPAREN ID RPAREN

    LPAREN          shift and go to state 39


state 25

    (54) column_item -> AVG . LPAREN ID RPAREN

    LPAREN          shift and go to state 40


state 26

    (55) column_item -> MIN . LPAREN ID RPAREN

    LPAREN          shift and go to state 41


state 27

    (56) column_item -> MAX . LPAREN ID RPAREN

    LPAREN          shift and go to state 42


state 28

    (5) select_stmt -> SELECT COUNT LPAREN . STAR RPAREN FROM ID optional_where optional_group

    STAR            shift and go to state 43


state 29

    (6) select_stmt -> SELECT SUM LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 44


state 30

    (7) select_stmt -> SELECT AVG LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 45


state 31

    (8) select_stmt -> SELECT MIN LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 46


state 32

    (9) select_stmt -> SELECT MAX LPAREN . ID RPAREN FROM ID optional_where optional_group

    ID              shift and go to state 47


state 33

    (73) create_stmt -> CREATE TABLE ID . LPAREN column_def_list RPAREN

    LPAREN          shift and go to state 48


state 34

    (86) insert_stmt -> INSERT INTO ID . LPAREN column_name_list RPAREN VALUES LPAREN value_list RPAREN
    (87) insert_stmt -> INSERT INTO ID . VALUES LPAREN value_list RPAREN

    LPAREN          shift and go to state 49
    VALUES          shift and go to state 50


state 35

    (4) select_stmt -> SELECT optional_distinct select_list FROM . ID optional_join optional_where optional_group optional_having optional_order optional_limit

    ID              shift and go to state 51


state 36

    (51) column_item -> ID DOT . ID

    ID              shift and go to state 52


state 37

    (49) column_list -> column_list COMMA . column_item
    (50) column_item -> . ID
    (51) column_item -> . ID DOT ID
    (52) column_item -> . COUNT LPAREN STAR RPAREN
    (53) column_item -> . SUM LPAREN ID RPAREN
    (54) column_item -> . AVG LPAREN ID RPAREN
    (55) column_item -> . MIN LPAREN ID RPAREN
    (56) column_item -> . MAX LPAREN ID RPAREN

    ID              shift and go to state 19
    COUNT           shift and go to state 23
    SUM             shift and go to state 24
    AVG             shift and go to state 25
    MIN             shift and go to state 26
    MAX             shift and go to state 27

    column_item                    shift and go to state 53

state 38
